--- a/src/components/common/CustomAutocomplete/CategoryAutocomplete/style.css
+++ b/src/components/common/CustomAutocomplete/CategoryAutocomplete/style.css
@@ -1,6 +1,7 @@
 .MuiAutocomplete-listbox {
-    margin: 20px !important;
-    .custom-dropdown:not(:last-child) {
+
+    /* margin: 20px !important; */
+    /* .custom-dropdown:not(:last-child) {
         .MuiAutocomplete-option {
             padding: 8px !important;
             margin-top: 8px !important;
@@ -8,5 +9,5 @@
             margin-right: 24px !important;
             border-bottom: 0.5px solid #b4c5d7 !important;
         }
-    }
+    } */
 }
