--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .main-layout {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  max-height: 100vh;
   scroll-behavior: smooth;
 }
